// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inspectCommand should fail with no result 2`] = `
{
  "injectorCalls": [
    [
      [
        "MYSQL",
      ],
    ],
  ],
  "logCalls": [
    [
      "error",
      "Could not find any results for "nothing_here".",
    ],
  ],
  "promptArgsCalls": [
    [],
  ],
}
`;

exports[`inspectCommand should fail with unexisting config name 2`] = `
{
  "injectorCalls": [
    [
      [
        "DOES_NOT_EXIST",
      ],
    ],
  ],
  "logCalls": [
    [
      "error",
      "No service found for "DOES_NOT_EXIST".",
    ],
    [
      "error",
      "Try debugging with the "DEBUG=whook" env.",
    ],
  ],
  "promptArgsCalls": [
    [],
  ],
}
`;

exports[`inspectCommand should work with an unexisting config but a default value 2`] = `
{
  "injectorCalls": [
    [
      [
        "DOES_NOT_EXIST",
      ],
    ],
  ],
  "logCalls": [
    [
      "error",
      "No service found for "DOES_NOT_EXIST".",
    ],
    [
      "error",
      "Try debugging with the "DEBUG=whook" env.",
    ],
    [
      "info",
      ""v8"",
    ],
  ],
  "promptArgsCalls": [
    [],
  ],
  "result": undefined,
}
`;

exports[`inspectCommand should work with no query at all 2`] = `
{
  "injectorCalls": [
    [
      [
        "MYSQL",
      ],
    ],
  ],
  "logCalls": [
    [
      "info",
      "{"auth":{"username":"root"},"version":"2.1.1"}",
    ],
  ],
  "promptArgsCalls": [
    [],
  ],
  "result": undefined,
}
`;

exports[`inspectCommand should work with no result but a default value 2`] = `
{
  "injectorCalls": [
    [
      [
        "MYSQL",
      ],
    ],
  ],
  "logCalls": [
    [
      "error",
      "Could not find any results for "nothing_here".",
    ],
    [
      "info",
      ""v8"",
    ],
  ],
  "promptArgsCalls": [
    [],
  ],
  "result": undefined,
}
`;

exports[`inspectCommand should work with one value 2`] = `
{
  "injectorCalls": [
    [
      [
        "MYSQL",
      ],
    ],
  ],
  "logCalls": [
    [
      "info",
      ""root"",
    ],
  ],
  "promptArgsCalls": [
    [],
  ],
  "result": undefined,
}
`;

exports[`inspectCommand should work with several values 2`] = `
{
  "injectorCalls": [
    [
      [
        "MYSQL",
      ],
    ],
  ],
  "logCalls": [
    [
      "info",
      ""root"",
    ],
  ],
  "promptArgsCalls": [
    [],
  ],
  "result": undefined,
}
`;
